# ray

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
docker/: api_server.Dockerfile  build.sh  ray.Dockerfile  rocm_hip_7_2_1_base.Dockerfile  vllm.Dockerfile
dockerfiles/: api_server.Dockerfile  llama_on_rocm.Dockerfile  rocm_hip_7_2_1_base.Dockerfile  vllm.Dockerfile
k8s/: alembic_migrations.yaml  amdgpu-dp.yaml  api_server.yaml  postgres_service.yaml  raycluster.yaml
k8s/apps/: api_server.yaml  postgres.yaml
k8s/infra/: amdgpu-dp.yaml  raycluster.yaml
k8s/jobs/: alembic_migrations.yaml
k8s/services/: api_server_service.yaml  postgres_service.yaml  raycluster-nodeport.yaml
src/api-server/: .dockerignore  log_conf.yaml  main.py  main2.py  pyproject.toml
src/api-server/src/alembic/: env.py
src/api-server/src/alembic/versions/: 12c06d5629ba_add_metric_columns_to_batches_table.py  c15117f716b3_add_batch_and_batch_prompts_tables.py
src/api-server/src/api_server/: app_lifespan.py  exception_handlers.py  exceptions.py
src/api-server/src/api_server/contracts/: __init__.py
src/api-server/src/api_server/contracts/server/: __init__.py  incoming.py  outgoing.py
src/api-server/src/api_server/contracts/services/: incoming.py  inference.py
src/api-server/src/api_server/database/: __init__.py  db.py  orm_models.py
src/api-server/src/api_server/services/: di.py  env.py  ray.py  time.py
